@@ -130,7 +130,7 @@ private:
 	QGraphicsPixmapItem* m_hyperimage;
 
 	// Axis scales
-	bool   m_axisValid[4];
+	bool   m_axisValid[5];	// x, y, x2, y2, z (indicates 3D plot)
 	double m_axisMin  [4];
 	double m_axisLower[4];
 	double m_axisScale[4];
